# yep-machine

./: .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
arduino/: platformio.ini
arduino/src/: main.cpp
arduino/src/i2c/: PololuRPiSlave.h  PololuTWISlave.cpp  PololuTWISlave.h
arduino/utils/calibrate-scale/: calibrate-scale.ino
commands/: calibrate.py  loop_wave.py  stop.py
common/: run_movements.py
docs/: architecture.drawio  schematic.fzz
docs/licenses/: pololu-rpi-slave-arduino-library.txt
main/: Dockerfile  entrypoint.sh  pyproject.toml
main/src/: config.py  monitoring.py  run.py
main/src/commands/: calibrate.py  end.py  loop_wave.py  stop.py  update_settings.py
main/src/context/: context.py  hardware.py  settings.py
main/src/context/utils/: run_moves.py  utils.py
main/src/i2c/: arduino.py  benchmark.py
main/src/streams/: commands.py
redis_proxy/: entrypoint.sh  pyproject.toml
scripts/: format.sh
src/: config.py  hardware.py  run.py
src/commands/: calibrate.py  loop_wave.py  stop.py
src/common/: run_movements.py
src/context/: context.py  hardware.py
src/context/utils/: run_moves.py  utils.py
src/streams/: commands.py  status.py
src/utils/: exceptions.py  run_movements.py  run_moves.py  utils.py  wave.py
streams/: commands.py  status.py
