[tool.poetry]
name = "yep-machine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gpiozero = "^1.5.1"
asyncio = "^3.4.3"
requests = "^2.24.0"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^20.8b1"
autoflake = "^1.4"
isort = "^4.3.21"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
