[tool.poetry]
name = "yep-machine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
asyncio = "^3.4.3"
requests = "^2.24.0"
websockets = "^8.1"
aioredis = "^1.3.1"
aiohttp = "^3.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
